// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`navigating between routes > given route with optional path parameters > when navigating to route with path parameters > renders 1`] = `
<div>
  <div
    class="Notifications"
  />
  <div
    class="ClusterManager"
  >
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive focusable"
            data-testid="home-button"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="home"
            >
              home
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-back"
          >
            <span
              class="icon"
              data-icon-name="arrow_back"
            >
              arrow_back
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-forward"
          >
            <span
              class="icon"
              data-icon-name="arrow_forward"
            >
              arrow_forward
            </span>
          </i>
        </div>
        <div
          class="separator"
        />
      </div>
    </div>
    <div
      class="topTabBar"
      role="tablist"
    >
      <div
        class="Tabs tabs scrollable"
      >
        <div
          class="Tab flex gap-2 items-center topTab"
          data-testid="top-tab-for-0ea9c88f-5f1a-4af0-9f42-16bc5b6f91f7"
          id="top-tab-0ea9c88f-5f1a-4af0-9f42-16bc5b6f91f7"
          role="tab"
          tabindex="0"
        >
          <div
            class="label"
          >
            <div
              class="flex items-center"
            >
              <span
                class="title"
              >
                Overview
              </span>
              <div
                class="close"
              >
                <i
                  class="Icon material interactive focusable small"
                  data-testid="top-tab-close-for-0ea9c88f-5f1a-4af0-9f42-16bc5b6f91f7"
                  tabindex="0"
                >
                  <span
                    class="icon"
                    data-icon-name="close"
                  >
                    close
                  </span>
                </i>
                <div
                  data-testid="tooltip-content-for-top-tab-close-for-0ea9c88f-5f1a-4af0-9f42-16bc5b6f91f7"
                >
                  Close tab
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Tab flex gap-2 items-center topTab"
          data-testid="top-tab-for-c0ec6cd9-b7f5-4051-a796-ed9a2310bfa3"
          id="top-tab-c0ec6cd9-b7f5-4051-a796-ed9a2310bfa3"
          role="tab"
          tabindex="0"
        >
          <div
            class="label"
          >
            <div
              class="flex items-center"
            >
              <span
                class="title"
              >
                Welcome
              </span>
              <div
                class="close"
              >
                <i
                  class="Icon material interactive focusable small"
                  data-testid="top-tab-close-for-c0ec6cd9-b7f5-4051-a796-ed9a2310bfa3"
                  tabindex="0"
                >
                  <span
                    class="icon"
                    data-icon-name="close"
                  >
                    close
                  </span>
                </i>
                <div
                  data-testid="tooltip-content-for-top-tab-close-for-c0ec6cd9-b7f5-4051-a796-ed9a2310bfa3"
                >
                  Close tab
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Tab flex gap-2 items-center topTab active"
          data-testid="top-tab-for-88a55ee4-8abc-46a1-b2eb-973d7230135f"
          id="top-tab-88a55ee4-8abc-46a1-b2eb-973d7230135f"
          role="tab"
          tabindex="0"
        >
          <div
            class="label"
          >
            <div
              class="flex items-center"
            >
              <span
                class="title"
              >
                Some Other Value
              </span>
              <div
                class="close"
              >
                <i
                  class="Icon material interactive focusable small"
                  data-testid="top-tab-close-for-88a55ee4-8abc-46a1-b2eb-973d7230135f"
                  tabindex="0"
                >
                  <span
                    class="icon"
                    data-icon-name="close"
                  >
                    close
                  </span>
                </i>
                <div
                  data-testid="tooltip-content-for-top-tab-close-for-88a55ee4-8abc-46a1-b2eb-973d7230135f"
                >
                  Close tab
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <main>
      <div
        id="lens-views"
      />
      <pre>
        {
  "someParameter": "some-value",
  "someOtherParameter": "some-other-value"
}
      </pre>
    </main>
    <div
      class="HotbarMenu flex flex-col"
    >
      <div
        class="HotbarItems flex flex-col"
      >
        <div
          class="HotbarCell animateDown"
          index="0"
        >
          <div
            aria-describedby="DndDescribedBy-6"
            aria-disabled="false"
            aria-roledescription="draggable"
            role="button"
            style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
            tabindex="0"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-welcome-page-entity"
                style="width: 40px; height: 40px; background: rgb(110, 77, 28);"
              >
                WP
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell animateDown"
          index="1"
        >
          <div
            aria-describedby="DndDescribedBy-6"
            aria-disabled="false"
            aria-roledescription="draggable"
            role="button"
            style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
            tabindex="0"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-catalog-entity"
                style="width: 40px; height: 40px; background: rgb(36, 110, 28);"
              >
                Ca
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell animateDown"
          index="2"
        />
        <div
          class="HotbarCell animateDown"
          index="3"
        />
        <div
          class="HotbarCell animateDown"
          index="4"
        />
        <div
          class="HotbarCell animateDown"
          index="5"
        />
        <div
          class="HotbarCell animateDown"
          index="6"
        />
        <div
          class="HotbarCell animateDown"
          index="7"
        />
        <div
          class="HotbarCell animateDown"
          index="8"
        />
        <div
          class="HotbarCell animateDown"
          index="9"
        />
        <div
          class="HotbarCell animateDown"
          index="10"
        />
        <div
          class="HotbarCell animateDown"
          index="11"
        />
        <div
          id="DndDescribedBy-6"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-6"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
        />
      </div>
      <div
        class="HotbarSelector"
      >
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_left"
          >
            arrow_left
          </span>
        </i>
        <div
          class="HotbarIndex"
        >
          <div
            class="badge Badge small clickable"
            data-testid="hotbar-menu-badge-for-Default"
            id="hotbarIndex"
          >
            1
          </div>
        </div>
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_right"
          >
            arrow_right
          </span>
        </i>
      </div>
    </div>
    <div
      class="StatusBar"
      data-testid="status-bar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      >
        <div
          class="item"
        >
          <div
            class="ClusterSearch"
            data-testid="status-bar-cluster-search"
            id="status-bar-cluster-search"
          >
            <i
              class="Icon material focusable small"
            >
              <span
                class="icon"
                data-icon-name="search"
              >
                search
              </span>
            </i>
          </div>
        </div>
      </div>
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
  </div>
</div>
`;

exports[`navigating between routes > given route without path parameters > when navigating to route > renders 1`] = `
<div>
  <div
    class="Notifications"
  />
  <div
    class="ClusterManager"
  >
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive focusable"
            data-testid="home-button"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="home"
            >
              home
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-back"
          >
            <span
              class="icon"
              data-icon-name="arrow_back"
            >
              arrow_back
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-forward"
          >
            <span
              class="icon"
              data-icon-name="arrow_forward"
            >
              arrow_forward
            </span>
          </i>
        </div>
        <div
          class="separator"
        />
      </div>
    </div>
    <div
      class="topTabBar"
      role="tablist"
    >
      <div
        class="Tabs tabs scrollable"
      >
        <div
          class="Tab flex gap-2 items-center topTab"
          data-testid="top-tab-for-c6469b6d-5764-4422-9136-0144945bfc95"
          id="top-tab-c6469b6d-5764-4422-9136-0144945bfc95"
          role="tab"
          tabindex="0"
        >
          <div
            class="label"
          >
            <div
              class="flex items-center"
            >
              <span
                class="title"
              >
                Overview
              </span>
              <div
                class="close"
              >
                <i
                  class="Icon material interactive focusable small"
                  data-testid="top-tab-close-for-c6469b6d-5764-4422-9136-0144945bfc95"
                  tabindex="0"
                >
                  <span
                    class="icon"
                    data-icon-name="close"
                  >
                    close
                  </span>
                </i>
                <div
                  data-testid="tooltip-content-for-top-tab-close-for-c6469b6d-5764-4422-9136-0144945bfc95"
                >
                  Close tab
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Tab flex gap-2 items-center topTab"
          data-testid="top-tab-for-ae86946c-fd03-49ac-8930-f95793c00573"
          id="top-tab-ae86946c-fd03-49ac-8930-f95793c00573"
          role="tab"
          tabindex="0"
        >
          <div
            class="label"
          >
            <div
              class="flex items-center"
            >
              <span
                class="title"
              >
                Welcome
              </span>
              <div
                class="close"
              >
                <i
                  class="Icon material interactive focusable small"
                  data-testid="top-tab-close-for-ae86946c-fd03-49ac-8930-f95793c00573"
                  tabindex="0"
                >
                  <span
                    class="icon"
                    data-icon-name="close"
                  >
                    close
                  </span>
                </i>
                <div
                  data-testid="tooltip-content-for-top-tab-close-for-ae86946c-fd03-49ac-8930-f95793c00573"
                >
                  Close tab
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Tab flex gap-2 items-center topTab active"
          data-testid="top-tab-for-02b41c5d-f1d4-4eee-9378-bc6683faf891"
          id="top-tab-02b41c5d-f1d4-4eee-9378-bc6683faf891"
          role="tab"
          tabindex="0"
        >
          <div
            class="label"
          >
            <div
              class="flex items-center"
            >
              <span
                class="title"
              >
                Some Path
              </span>
              <div
                class="close"
              >
                <i
                  class="Icon material interactive focusable small"
                  data-testid="top-tab-close-for-02b41c5d-f1d4-4eee-9378-bc6683faf891"
                  tabindex="0"
                >
                  <span
                    class="icon"
                    data-icon-name="close"
                  >
                    close
                  </span>
                </i>
                <div
                  data-testid="tooltip-content-for-top-tab-close-for-02b41c5d-f1d4-4eee-9378-bc6683faf891"
                >
                  Close tab
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <main>
      <div
        id="lens-views"
      />
      <div>
        Some component
      </div>
    </main>
    <div
      class="HotbarMenu flex flex-col"
    >
      <div
        class="HotbarItems flex flex-col"
      >
        <div
          class="HotbarCell animateDown"
          index="0"
        >
          <div
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-roledescription="draggable"
            role="button"
            style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
            tabindex="0"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-welcome-page-entity"
                style="width: 40px; height: 40px; background: rgb(110, 77, 28);"
              >
                WP
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell animateDown"
          index="1"
        >
          <div
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-roledescription="draggable"
            role="button"
            style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
            tabindex="0"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-catalog-entity"
                style="width: 40px; height: 40px; background: rgb(36, 110, 28);"
              >
                Ca
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell animateDown"
          index="2"
        />
        <div
          class="HotbarCell animateDown"
          index="3"
        />
        <div
          class="HotbarCell animateDown"
          index="4"
        />
        <div
          class="HotbarCell animateDown"
          index="5"
        />
        <div
          class="HotbarCell animateDown"
          index="6"
        />
        <div
          class="HotbarCell animateDown"
          index="7"
        />
        <div
          class="HotbarCell animateDown"
          index="8"
        />
        <div
          class="HotbarCell animateDown"
          index="9"
        />
        <div
          class="HotbarCell animateDown"
          index="10"
        />
        <div
          class="HotbarCell animateDown"
          index="11"
        />
        <div
          id="DndDescribedBy-0"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-0"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
        />
      </div>
      <div
        class="HotbarSelector"
      >
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_left"
          >
            arrow_left
          </span>
        </i>
        <div
          class="HotbarIndex"
        >
          <div
            class="badge Badge small clickable"
            data-testid="hotbar-menu-badge-for-Default"
            id="hotbarIndex"
          >
            1
          </div>
        </div>
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_right"
          >
            arrow_right
          </span>
        </i>
      </div>
    </div>
    <div
      class="StatusBar"
      data-testid="status-bar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      >
        <div
          class="item"
        >
          <div
            class="ClusterSearch"
            data-testid="status-bar-cluster-search"
            id="status-bar-cluster-search"
          >
            <i
              class="Icon material focusable small"
            >
              <span
                class="icon"
                data-icon-name="search"
              >
                search
              </span>
            </i>
          </div>
        </div>
      </div>
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
  </div>
</div>
`;
